<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gea</string>
    <string name="action_settings">Settings</string>
    <string name="play_button_text">Play</string>
    <string name="pause_button_text">Pause</string>
    <string name="stop_button_text">Stop</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="song_toggle">Song</string>
    <string name="album_toggle">Album</string>
    <string name="artist_toggle">Artist</string>
    <string name="search_hint">search</string>
    <string name="search_submit_button_text">Go</string>
    <string name="song_info_placeholder_text">Nothing playing</string>
    <string name="search_label">search</string>
    <string name="searchOptions">Search Options</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="up_button_text">Up</string>
    <string name="down_button_text">Dn</string>
    <string name="default_position_display">0:00</string>
    <string name="default_duration_display">0:00</string>
    <string name="position_duration_separator_display">/</string>
    <string name="album_art_content_description">Album Art</string>
    <string name="rdio_logo_content_description">Rdio Logo</string>
    <string name="volume_label">Volume</string>
    <string name="gea_logo_content_description">Gea Logo</string>
    <string name="powered_by">Powered By</string>
    <string name="loading">loading&#8230;</string>
    <string name="top_tracks_dismiss">Done</string>
    
    <!-- Change localhost_base_url to address of local machine running Gea server
    	 to run application in debug mode on physical Android device -->
    <string name="localhost_base_url">http://10.0.2.2:3000</string>
    <string name="net_base_url">http://gea.kenpowers.net</string>
    
    <string-array name="filter_array">
        <item>Top songs today</item>
        <item>Top songs this week</item>
        <item>Top songs this month</item>
        <item>Top songs this year</item>
        <item>Top songs of all time</item>
    </string-array>

</resources>