<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009900" >

    <ProgressBar
        android:id="@+id/rdioInitializedProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    
    <ImageView
        android:id="@+id/launchRdioLogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/rdio_logo_content_description"
        android:scaleType="fitEnd"
        android:src="@drawable/rdio_logo_blue" />

    <TextView
        android:id="@+id/poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/launchRdioLogo"
        android:text="@string/powered_by" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdioInitializedProgress"
        android:layout_centerHorizontal="true"
        android:text="@string/loading" />

</RelativeLayout>