<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/searchField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/searchSubmit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchSubmitClicked"
            android:text="@string/search_submit_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_info_placeholder_text" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3" >

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left|center_vertical"
                android:layout_row="1" />

            <Button
                android:id="@+id/play"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/play_button_text" />

            <LinearLayout
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:text="Up" />

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:text="Down" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:columnCount="1" >

            <Button
                android:id="@+id/button4"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/prev_button_text" />

            <Button
                android:id="@+id/button5"
                android:layout_column="0"
                android:layout_gravity="right|top"
                android:layout_row="1"
                android:text="@string/next_button_text" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="138dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>